--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Weather service from openweathermap.org source">
+    <meta name="description" content="Weather service from openWeatherMap.org source">
     <meta name="author" content="Mozhaev Alexandr">
     
     <title>World weather service</title>
